# skaldic-sdk-python

./: .gitignore  LICENSE  README.md  pydoc-markdown.yaml  pyproject.toml
.github/workflows/: publish.yml
docs/: index.md
docs/api/: traust.md
docs/traust/: concepts.md  exceptions.md  quickstart.md  testing.md
examples/: summarise_agent.py
scripts/: generate_docs.sh
src/skaldic/: __init__.py
src/skaldic/traust/: __init__.py  exceptions.py  http_client.py  models.py  session.py
tests/: test_session.py
