[project]
name = "skaldic-sdk"
version = "0.1.0"
description = "Python SDK for Skaldic AI"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Erno Vuori", email = "erno.vuori@gmail.com"}]
requires-python = ">=3.10"
keywords = ["ai", "agents", "authorization", "security", "access-control", "tbac"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://skaldicai.com"
Documentation = "https://docs.skaldicai.com"
Repository = "https://github.com/skaldic-ai/skaldic-sdk-python"
Issues = "https://github.com/skaldic-ai/skaldic-sdk-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skaldic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
